--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,8 @@ fabric.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# keys
+*.enc
 
 # End of https://www.gitignore.io/api/java,eclipse,intellij
 
